Change to build kubeval with baked in k8s artifact